# Kronk

./: .clang-format  .gitignore  Makefile  Readme.md  a.out  dabble  kronk.sh  libDessin.c  run_tests.sh  runtimeLib.c  test.cpp
hooks/: pre-commit
include/: Lexer.h  Nodes.h  Parser.h  iRGenHelpers.h  node.h
kronkc/: install.sh  meson.build
kronkc/include/: Attributes.h  Driver.h  IRGen.h  IRGenAide.h  Kronkjit.h  Lexer.h  Names.h  Nodes.h  Parser.h  ParserImpl.h  Types.h  argparse.h  iRGenHelpers.h  irGenAide.h  typeInfo.h
kronkc/src/: Attributes.cpp  Driver.cpp  Lexer.cpp  Main.cpp  Parser.cpp  iRGenHelpers.cpp  iRGenerator.cpp  main.cpp  meson.build
kronkc/src/Attributes/: Attributes.cpp
kronkc/src/CompileDriver/: Driver.cpp
kronkc/src/IRGen/: BinOps.cpp  BlockStmt.cpp  ConstantExprs.cpp  Declrs.cpp  Entities.cpp  Functions.cpp  IRGenAide.cpp  Imports.cpp  Iteration.cpp  Lists.cpp  OperatorExprs.cpp  Selection.cpp  StmtBlock.cpp  TypeIds.cpp  Types.cpp  irGenAide.cpp  typeInfo.cpp
kronkc/src/Lexer/: Lexer.cpp
kronkc/src/NameInfo/: Names.cpp
kronkc/src/Names/: Names.cpp
kronkc/src/Parser/: Constants.cpp  Declrs.cpp  Entities.cpp  Functions.cpp  GenericExprs.cpp  Identifiers.cpp  Imports.cpp  Iteration.cpp  Lists.cpp  ParserInterfaceImpl.cpp  ParserUtils.cpp  Selection.cpp
kronkc/src/TheJIT/: Kronkjit.cpp
kronkrt/: install.sh  meson.build
kronkrt/src/: CompilerUtils.cpp  IOFns.cpp  helperFns.cpp  helper_funcs.cpp  io.cpp  kronrtbc_gen.sh  math.cpp  meson.build
src/: IRGenerator.cpp  Lexer.cpp  Parser.cpp  iRGenHelpers.cpp  iRGenerator.cpp  main.cpp
tests/: test.bbl  test0.krk  test0.krnk  test1.bbl  test1.krk  test1.krnk  test12.krnk  test2.bbl  test2.krk  test2.krnk  test3.bbl  test3.krk  test3.krnk  test4.bbl  test4.krk  test4.krnk  test5.bbl  test5.krk  test5.krnk  test6.krk  test6.krnk
